--- a/src/partials/gallery-back-drop.html
+++ b/src/partials/gallery-back-drop.html
@@ -15,18 +15,18 @@
         <picture class="gallery__img">
           <source
             srcset="
-              ./gallery-images/one.webp    500w,
-              ./gallery-images/onex2.webp 1000w
+              ./images/gallery-images/one.webp    500w,
+              ./images/gallery-images/onex2.webp 1000w
             "
             type="image/webp"
             sizes="(min-width: 320px) 100vw"
           />
           <img
             srcset="
-              ./gallery-images/one.jpg    500w,
-              ./gallery-images/onex2.jpg 1000w
+              ./images/gallery-images/one.jpg    500w,
+              ./images/gallery-images/onex2.jpg 1000w
             "
-            src="./gallery-images/one.jpg"
+            src="./images/gallery-images/one.jpg"
             alt="technokryak"
             sizes="(min-width: 320px) 100vw"
           />
@@ -36,18 +36,18 @@
         <picture class="gallery__img">
           <source
             srcset="
-              ./gallery-images/two.webp    500w,
-              ./gallery-images/twox2.webp 1000w
+              ./images/gallery-images/two.webp    500w,
+              ./images/gallery-images/twox2.webp 1000w
             "
             type="image/webp"
             sizes="(min-width: 320px) 100vw"
           />
           <img
             srcset="
-              ./gallery-images/two.jpg    500w,
-              ./gallery-images/twox2.jpg 1000w
+              ./images/gallery-images/two.jpg    500w,
+              ./images/gallery-images/twox2.jpg 1000w
             "
-            src="./gallery-images/two.jpg"
+            src="./images/gallery-images/two.jpg"
             alt="two"
             sizes="(min-width: 320px) 100vw"
           />
@@ -57,18 +57,18 @@
         <picture class="gallery__img">
           <source
             srcset="
-              ./gallery-images/three.webp    500w,
-              ./gallery-images/threex2.webp 1000w
+              ./images/gallery-images/three.webp    500w,
+              ./images/gallery-images/threex2.webp 1000w
             "
             type="image/webp"
             sizes="(min-width: 320px) 100vw"
           />
           <img
             srcset="
-              ./gallery-images/three.jpg    500w,
-              ./gallery-images/threex2.jpg 1000w
+              ./images/gallery-images/three.jpg    500w,
+              ./images/gallery-images/threex2.jpg 1000w
             "
-            src="./gallery-images/three.jpg"
+            src="./images/gallery-images/three.jpg"
             alt="three"
             sizes="(min-width: 320px) 100vw"
           />
@@ -78,18 +78,18 @@
         <picture class="gallery__img">
           <source
             srcset="
-              ./gallery-images/four.webp    500w,
-              ./gallery-images/fourx2.webp 1000w
+              ./images/gallery-images/four.webp    500w,
+              ./images/gallery-images/fourx2.webp 1000w
             "
             type="image/webp"
             sizes="(min-width: 320px) 100vw"
           />
           <img
             srcset="
-              ./gallery-images/four.jpg    500w,
-              ./gallery-images/fourx2.jpg 1000w
+              ./images/gallery-images/four.jpg    500w,
+              ./images/gallery-images/fourx2.jpg 1000w
             "
-            src="./gallery-images/four.jpg"
+            src="./images/gallery-images/four.jpg"
             alt="four"
             sizes="(min-width: 320px) 100vw"
           />
@@ -99,18 +99,18 @@
         <picture class="gallery__img">
           <source
             srcset="
-              ./gallery-images/five.webp    500w,
-              ./gallery-images/fivex2.webp 1000w
+              ./images/gallery-images/five.webp    500w,
+              ./images/gallery-images/fivex2.webp 1000w
             "
             type="image/webp"
             sizes="(min-width: 320px) 100vw"
           />
           <img
             srcset="
-              ./gallery-images/five.jpg    500w,
-              ./gallery-images/fivex2.jpg 1000w
+              ./images/gallery-images/five.jpg    500w,
+              ./images/gallery-images/fivex2.jpg 1000w
             "
-            src="./gallery-images/five.jpg"
+            src="./images/gallery-images/five.jpg"
             alt="five"
             sizes="(min-width: 320px) 100vw"
           />
@@ -120,18 +120,18 @@
         <picture class="gallery__img">
           <source
             srcset="
-              ./gallery-images/six.webp    500w,
-              ./gallery-images/sixx2.webp 1000w
+              ./images/gallery-images/six.webp    500w,
+              ./images/gallery-images/sixx2.webp 1000w
             "
             type="image/webp"
             sizes="(min-width: 320px) 100vw"
           />
           <img
             srcset="
-              ./gallery-images/six.jpg    500w,
-              ./gallery-images/sixx2.jpg 1000w
+              ./images/gallery-images/six.jpg    500w,
+              ./images/gallery-images/sixx2.jpg 1000w
             "
-            src="./gallery-images/six.jpg"
+            src="./images/gallery-images/six.jpg"
             alt="six"
             sizes="(min-width: 320px) 100vw"
           />
@@ -141,18 +141,18 @@
         <picture class="gallery__img">
           <source
             srcset="
-              ./gallery-images/seven.webp    500w,
-              ./gallery-images/sevenx2.webp 1000w
+              ./images/gallery-images/seven.webp    500w,
+              ./images/gallery-images/sevenx2.webp 1000w
             "
             type="image/webp"
             sizes="(min-width: 320px) 100vw"
           />
           <img
             srcset="
-              ./gallery-images/seven.jpg    500w,
-              ./gallery-images/sevenx2.jpg 1000w
+              ./images/gallery-images/seven.jpg    500w,
+              ./images/gallery-images/sevenx2.jpg 1000w
             "
-            src="./gallery-images/seven.jpg"
+            src="./images/gallery-images/seven.jpg"
             alt="seven"
             sizes="(min-width: 320px) 100vw"
           />
@@ -162,18 +162,18 @@
         <picture class="gallery__img">
           <source
             srcset="
-              ./gallery-images/eight.webp    500w,
-              ./gallery-images/eightx2.webp 1000w
+              ./images/gallery-images/eight.webp    500w,
+              ./images/gallery-images/eightx2.webp 1000w
             "
             type="image/webp"
             sizes="(min-width: 320px) 100vw"
           />
           <img
             srcset="
-              ./gallery-images/eight.jpg    500w,
-              ./gallery-images/eightx2.jpg 1000w
+              ./images/gallery-images/eight.jpg    500w,
+              ./images/gallery-images/eightx2.jpg 1000w
             "
-            src="./gallery-images/eight.jpg"
+            src="./images/gallery-images/eight.jpg"
             alt="eight"
             sizes="(min-width: 320px) 100vw"
           />
@@ -183,18 +183,18 @@
         <picture class="gallery__img">
           <source
             srcset="
-              ./gallery-images/nine.webp    500w,
-              ./gallery-images/ninex2.webp 1000w
+              ./images/gallery-images/nine.webp    500w,
+              ./images/gallery-images/ninex2.webp 1000w
             "
             type="image/webp"
             sizes="(min-width: 320px) 100vw"
           />
           <img
             srcset="
-              ./gallery-images/nine.jpg    500w,
-              ./gallery-images/ninex2.jpg 1000w
+              ./images/gallery-images/nine.jpg    500w,
+              ./images/gallery-images/ninex2.jpg 1000w
             "
-            src="./gallery-images/nine.jpg"
+            src="./images/gallery-images/nine.jpg"
             alt="nine"
             sizes="(min-width: 320px) 100vw"
           />
@@ -204,18 +204,18 @@
         <picture class="gallery__img">
           <source
             srcset="
-              ./gallery-images/ten.webp    500w,
-              ./gallery-images/tenx2.webp 1000w
+              ./images/gallery-images/ten.webp    500w,
+              ./images/gallery-images/tenx2.webp 1000w
             "
             type="image/webp"
             sizes="(min-width: 320px) 100vw"
           />
           <img
             srcset="
-              ./gallery-images/ten.jpg    500w,
-              ./gallery-images/tenx2.jpg 1000w
+              ./images/gallery-images/ten.jpg    500w,
+              ./images/gallery-images/tenx2.jpg 1000w
             "
-            src="./gallery-images/ten.jpg"
+            src="./images/gallery-images/ten.jpg"
             alt="ten"
             sizes="(min-width: 320px) 100vw"
           />
@@ -224,18 +224,18 @@
     </ul>
     <button type="button" class="gallery__next gallery__bd-toggle">
       <svg class="gallery__btn-toggle">
-        <use href="/images/symbol-defs.svg#icon-arrow"></use>
+        <use href="./images/symbol-defs.svg#icon-arrow"></use>
       </svg>
     </button>
     <div class="gallery__mobile-btn">
       <button type="button" class="gallery__mb-back gallery__mb-btn">
         <svg class="gallery__btn-toggle">
-          <use href="/images/symbol-defs.svg#icon-arrow"></use>
+          <use href="./images/symbol-defs.svg#icon-arrow"></use>
         </svg>
       </button>
       <button type="button" class="gallery__mb-next gallery__mb-btn">
         <svg class="gallery__btn-toggle">
-          <use href="/images/symbol-defs.svg#icon-arrow"></use>
+          <use href="./images/symbol-defs.svg#icon-arrow"></use>
         </svg>
       </button>
     </div>
