--- a/src/sass/_gallery.scss
+++ b/src/sass/_gallery.scss
@@ -52,6 +52,7 @@
   width: 38px;
   height: 38px;
   cursor: pointer;
+
   @media screen and (min-width: 768px) {
     width: 87px;
     height: 87px;
@@ -70,13 +71,17 @@
     transform: scale(1.3) rotate(5deg);
   }
 }
+
+.gallery__img {
+  transition: 250ms $timing-function;
+}
 .galerry__see {
   padding: 0;
   margin: 0;
-  font-size: 40px;
+  font-size: 30px;
   font-weight: bold;
   color: #fff;
-  background-color: rgba(255, 192, 203, 0.5);
+  background-color: rgba(199, 19, 62, 0.66);
   width: 100%;
   height: 100%;
   position: absolute;
@@ -249,6 +254,15 @@
   padding: 0;
   background-color: transparent;
   cursor: pointer;
+  border-radius: 50%;
+  transition: 250ms $timing-function;
+  &:hover {
+    background-color: #c7133e;
+    border-radius: 50%;
+  }
+  &:hover .gallery__btn-close {
+    transform: scale(0.6);
+  }
   @media screen and (min-width: 768px) {
     width: 45px;
     height: 45px;
@@ -261,6 +275,7 @@
 .gallery__btn-close {
   width: 25px;
   height: 25px;
+  transform: scale(0.6);
   @media screen and (min-width: 768px) {
     width: 45px;
     height: 45px;
@@ -274,12 +289,18 @@
   position: absolute;
   left: 2%;
   top: 50%;
-  transform: translateY(-50%);
+  transform: translateY(-50%) scale(1);
   cursor: pointer;
-  transition: left 500ms ease;
+  rotate: 180deg;
+
+  // @media screen and (min-width: 1000px) {
+  //   &:hover {
+  //     left: 0;
+  //   }
+  // }
   @media screen and (min-width: 1000px) {
-    &:hover {
-      left: 0;
+    &:hover .gallery__btn-toggle {
+      transform: scale(1.1);
     }
   }
   visibility: hidden;
@@ -293,10 +314,15 @@
   top: 50%;
   transform: translateY(-50%);
   cursor: pointer;
-  transition: right 500ms ease;
+  // transition: right 500ms ease;
+  // @media screen and (min-width: 1000px) {
+  //   &:hover {
+  //     right: 0;
+  //   }
+  // }
   @media screen and (min-width: 1000px) {
-    &:hover {
-      right: 0;
+    &:hover .gallery__btn-toggle {
+      transform: scale(1.1);
     }
   }
   visibility: hidden;
@@ -322,6 +348,8 @@
 .gallery__btn-toggle {
   width: 30px;
   height: 30px;
+  transition: 250ms $timing-function;
+
   @media screen and (min-width: 768px) {
     width: 45px;
     height: 45px;
@@ -348,6 +376,7 @@
 }
 .gallery__mb-back {
   margin-right: 10px;
+  transform: rotate(180deg);
 }
 .gallery__mb-next {
   margin-left: 10px;
