--- a/src/partials/contact.html
+++ b/src/partials/contact.html
@@ -1,6 +1,6 @@
 <section class="contact .container" id="contact">
   <div class="contact-div">
-    <article class="contact-card">
+    <article class="contact-card contact-card__anim1">
       <h2 class="contact-title">cafe</h2>
       <ul class="contact-list">
         <li><p class="contact-text">Chicago</p></li>
@@ -21,7 +21,7 @@
         <li><a class="contact-mail" href="mailto:">noreply@envato.com</a></li>
       </ul>
     </article>
-    <article class="contact-card">
+    <article class="contact-card contact-card__anim2">
       <h2 class="contact-title contact-title__background-color">FOODTRUCK</h2>
       <ul class="contact-list">
         <li><p class="contact-text">Los Angeles</p></li>
@@ -42,7 +42,7 @@
         <li><a class="contact-mail" href="mailto:">noreply@envato.com</a></li>
       </ul>
     </article>
-    <article class="contact-card">
+    <article class="contact-card contact-card__anim3">
       <h2 class="contact-title">cafe</h2>
       <ul class="contact-list">
         <li><p class="contact-text">New York</p></li>
@@ -87,7 +87,7 @@
                 </svg>
               </a>
               <h1>Our location</h1>
-              <div>Find us on the map!</div>
+              <p> Find us on the map!</p>
               <div class="contact-map">
                 <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d11879.668874027699!2d-87.62174871324999!3d41.89463736753213!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x880e2caabfd640d1%3A0x86af0f869dc4b0af!2zU3RyZWV0ZXJ2aWxsZSwg0KfQuNC60LDSkdC-LCDQhtC70LvRltC90L7QudGBIDYwNjExLCDQodC_0L7Qu9GD0YfQtdC90ZYg0KjRgtCw0YLQuCDQkNC80LXRgNC40LrQuA!5e0!3m2!1suk!2sua!4v1655023395894!5m2!1suk!2sua" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
               </div>
