--- a/src/sass/_contact.scss
+++ b/src/sass/_contact.scss
@@ -47,6 +47,52 @@
   }
 }
 
+//animation-card
+
+@media (prefers-reduced-motion: no-preference) {
+  .contact-card__anim1 {
+    transform: translateY(0);
+    animation-delay: 0.1s;
+    animation-name: card-up;
+    animation-duration: 1s;
+    animation-timing-function: $timing-function;
+    animation-fill-mode: forwards;
+    opacity: 0;
+  }
+  .contact-card__anim2 {
+    transform: translateY(0);
+    animation-delay: 0.3s;
+    animation-name: card-up;
+    animation-duration: 1s;
+    animation-timing-function: $timing-function;
+    animation-fill-mode: forwards;
+    opacity: 0;
+  }
+  .contact-card__anim3 {
+    display: block;
+    transform: translateY(0);
+    animation-delay: 0.5s;
+    animation-name: card-up;
+    animation-duration: 1s;
+    animation-timing-function: $timing-function;
+    animation-fill-mode: forwards;
+    opacity: 0;
+  }
+  @keyframes card-up {
+    0% {
+      opacity: 0;
+      transform: translateY(-50px);
+    }
+
+    100% {
+      opacity: 1;
+      transform: translateY(0);
+    }
+  }
+}
+
+//end-animation
+
 .contact-title {
   display: inline-block;
   background-color: $ice-coffee-pl-bg-color;
@@ -186,7 +232,7 @@
 }
 
 .contact-button__svg {
-margin-left: 14px;
+  margin-left: 14px;
 }
 
 .contact-button__margin {
@@ -236,7 +282,7 @@ margin-left: 14px;
   }
   & > div {
     width: 80%;
-    height: 50%;
+    height: 80%;
     @media screen and (min-width: 768px) {
       height: 90%;
     }
@@ -244,20 +290,24 @@ margin-left: 14px;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    padding: 2em;
+    padding: 32px;
     background: white;
     border-radius: 30px;
   }
   h1 {
-    font-size: 150%;
+    font-size: 22px;
     margin: 0 0 15px;
+  }
+  p {
+    margin-bottom: 15px;
   }
 }
 
 .modal-close {
   position: absolute;
-  right: 20px;
-  top: 20px;
+  right: 0;
+  top: 0;
+  padding: 20px;
 }
 
 .contact-modal {
@@ -283,11 +333,11 @@ margin-left: 14px;
 .contact-map iframe {
   left: 0;
   top: 0;
-  height: 70%;
+  height: 85%;
   width: 100%;
   position: absolute;
   @media screen and (min-width: 768px) {
-    height: 100%;
+    height: 95%;
     width: 100%;
   }
 }
