--- a/src/partials/gallery.html
+++ b/src/partials/gallery.html
@@ -1,5 +1,5 @@
 <section class="galerry">
-  <div class="container">
+  <div class="container container--gallery">
     <div class="gallery__box gallery__one">
       <div class="gallery__img-box one">
         <picture class="gallery__img">
