--- a/src/sass/_modal.scss
+++ b/src/sass/_modal.scss
@@ -22,6 +22,9 @@
 }
 
 .modal {
+  max-width: 498px;
+  width: calc(100% - 15px);
+
   position: absolute;
   top: 50%;
   left: 50%;
@@ -37,10 +40,6 @@
     opacity: 1;
     pointer-events: auto;
     overflow-y: auto;
-  }
-
-  @media screen and (min-width: 768px) {
-    width: 498px;
   }
 }
 
@@ -92,7 +91,7 @@
 
 .form__input {
   position: relative;
-  width: 434px;
+  width: 100%;
   height: 44px;
   padding-left: 42px;
   border: none;
@@ -104,7 +103,6 @@
     border-color: 1px solid $button-primary-color;
   }
 }
-
 .form__comment {
   margin-bottom: 24px;
   font-size: 14px;
