--- a/src/sass/index.css
+++ b/src/sass/index.css
@@ -96,6 +96,8 @@ ul {
 }
 
 .modal {
+  max-width: 498px;
+  width: calc(100% - 15px);
   position: absolute;
   top: 50%;
   left: 50%;
@@ -109,11 +111,6 @@ ul {
   opacity: 1;
   pointer-events: auto;
   overflow-y: auto;
-}
-@media screen and (min-width: 768px) {
-  .modal {
-    width: 498px;
-  }
 }
 
 .modal__button {
@@ -162,7 +159,7 @@ ul {
 
 .form__input {
   position: relative;
-  width: 434px;
+  width: 100%;
   height: 44px;
   padding-left: 42px;
   border: none;
